--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <ul class="inline-list flex-responsive">
                 
                   <li>
-                    <a href="mysite.kylegill.work"
+                    <a href="/"
                        rel="noopener noreferrer"
                        aria-label="Personal Website"
                        class="link-with-icon">
@@ -109,7 +109,7 @@
                   </li>
                 
                   <li>
-                    <a href="https://sample.com"
+                    <a href="www.linkedin.com/in/kyle-gill-5981a5306"
                        rel="noopener noreferrer"
                        aria-label="LinkedIn"
                        class="link-with-icon">
