--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Site Info -->
     <title>Kyle Gill - Portfolio</title>
-    <meta name="description" content="Kyle Gill - Hey, I&#39;m a Computer Science student at Carleton University, specializing in Artificial Intelligence and Machine Learning at Carleton University. I enjoy building efficient, scalable, software with the goal of learning more.">
+    <meta name="description" content="Kyle Gill - Hey, I&#39;m a Computer Science student specializing in Artificial Intelligence and Machine Learning at Carleton University. I enjoy building efficient, scalable, software with the goal of learning more.">
     <meta name="author" content="Kyle Gill">
 
     <!-- Open Graph Tags: The title of the page for social media sharing. It can match the title tag or be more descriptive. -->
