--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 
               </ul>
             
-            <p class="header-summary">Hey, I&#39;m a Computer Science student at Carleton University, specializing in Artificial Intelligence and Machine Learning at Carleton University. I enjoy building efficient, scalable, software with the goal of learning more.</p>
+            <p class="header-summary">Hey, I&#39;m a Computer Science student specializing in Artificial Intelligence and Machine Learning at Carleton University. I enjoy building efficient, scalable, software with the goal of learning more.</p>
           </div>
         </div>
       </div>
