--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                       Proxmox Virtualization &amp; Remote Hosting Environment
                     
                   </h3>
-                  <p>LCX, DDNS, Linux Networking</p>
+                  <p>LXC, DDNS, Linux Networking</p>
                   
                     <ul>
                       <li>Deployed a Proxmox VE hypervisor on a remote server to host and configure Linux containers</li><li>Worked with port forwarding and SSH access for remote administration, establishing reliable connectivity for hosted services</li><li>Implemented Dynamic DNS to ensure uptime despite changing public IPs</li>
